--- a/project.html
+++ b/project.html
@@ -107,9 +107,9 @@
     <h2>Content Generator</h2>
     <ul>
     <li>
-      An automated attendence system marks the attendence and keeps track of check in and out of the person.</li>
+      A GUI based content generator which generates content relevent to the keyword.</li>
       <li>
-      It displays the work hours graph of the person based on check in and out.</li>
+      OPEN AI gpt api key was used.</li>
       <li>You can find the code
       <a href="https://github.com/shaheen234/ContentGenerator">here.</a></li>
       </ul>
@@ -126,9 +126,9 @@
     <h2>Mutual Information Gain</h2>
     <ul>
     <li>
-      An automated attendence system marks the attendence and keeps track of check in and out of the person.</li>
+      Feature extraction based on mutual information gain to get which words has most impact while predicting the movie review</li>
       <li>
-      It displays the work hours graph of the person based on check in and out.</li>
+     Decision tree was used for classification after feature extraction.</li>
       <li>You can find the code
       <a href="https://github.com/shaheen234/feature-selection-based-on-mutual-information-gain-for-classification">here.</a></li>
       </ul>
